[Polyam] Fix horizontal scrollbar on who to follow carousel in web UI
Port efb0e2c34b2c2921ac0c0b999d99384882667d6c to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -1557,6 +1557,7 @@ $ui-header-logo-wordmark-width: 99px;
       scroll-padding: 16px;
       scroll-behavior: smooth;
       overflow-x: scroll;
+      scrollbar-width: none;
 
       &__card {
         background: var(--background-color);
